--- a/_includes/footer_home.html
+++ b/_includes/footer_home.html
@@ -1,11 +1,10 @@
-            <div class="section text-gray" id="footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">                            
-                        </div>                                              
-                        <div class="col-sm-6">
-                            <p><small>Template by <a href=" visualdialog.org" class="external"> visualdialog.org</a>.</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<hr>
+<div class="section text-gray" id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12" style="text-align:right;">
+                <small>Template by <a href=" visualdialog.org" class="external"> visualdialog.org</a>.</small>
+            </div>                        
+        </div>
+    </div>
+</div>
