--- a/_includes/footer_practice.html
+++ b/_includes/footer_practice.html
@@ -3,7 +3,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12" style="text-align:right;">
-                            <small>Template by <a href=" visualdialog.org" class="external"> visualdialog.org</a>.</small>
+                            <small>Template by <a href="https://visualdialog.org" class="external">visualdialog.org</a>.</small>
                         </div>                        
                     </div>
                 </div>
