--- a/_includes/header_analysis.html
+++ b/_includes/header_analysis.html
@@ -13,16 +13,15 @@
 
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-	<!--<li><a href="#intro">Introduction</a></li>-->
+        <li><a href="#intro">Introduction</a></li>
         <li><a href="#cfp">Call for Papers</a></li>
         <!--<li><a href="#dates">Important Dates</a></li>-->
-	<li><a href="#schedule">Schedule</a></li>
-        <li><a href="#speakers">Invited Speakers</a></li>
-		<li><a href="#awards">Awards</a></li>
-	<li><a href="#accepted">Accepted Papers and Posters</a></li>
+        <li><a href="#schedule">Schedule</a></li>
+        <li><a href="#speakers">Invited Speakers</a></li>        
+        <li><a href="#accepted">Accepted Papers and Posters</a></li>
         <li><a href="#organizers">Organizers</a></li>
-	<!--<li><a href="#programcommittee">Program Committee</a></li>-->
-		<li><a href="#sponsors">Sponsors</a></li>
+        <li><a href="#programcommittee">Program Committee</a></li>
+        <li><a href="#sponsors">Sponsors</a></li>
       </ul>
     </div>
 
