--- a/_includes/header_challenges.html
+++ b/_includes/header_challenges.html
@@ -13,11 +13,11 @@
 
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">	
-	<li><a href="#calls">Call for Contributions</a></li>
+	<li><a href="#cfp">Call for Contributions</a></li>
 	<li><a href="#dates">Important Dates</a></li>
 	<li><a href="#schedule">Schedule</a></li>
 	<li><a href="#speakers">Keynote Speakers</a></li>		
-	<li><a href="#invited-posters">Invited Posters</a></li>
+	<li><a href="#invited-posters">Accepted Papers</a></li>
   <li><a href="#organizers">Organizers</a></li>	
 	<li><a href="#sponsors">Sponsors</a></li>
       </ul>
