--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -46,7 +46,7 @@
 
 <div id="workshops-header">
   <ul>
-    <li><a href="/">Thematic Quarter on Causality</a></li>
+    <li><a href="/">🏠</a></li>
     <li>|</li>
     <li><a href="/analysis/">When Causal Inference meets Statistical Analysis</a></li>
     <li>|</li>
