Change the header to include SCAI and CNRS logo

--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -44,8 +44,12 @@
   }
 </style>
 
-<div id="workshops-header">
-  <ul>
+<div id="year-header">
+  <div><img src="/quarter/img/220701_AISSAI_02_LOGO.jpeg" style="float: left; top: 50%;" width="10%" height="10%"/></div>
+  <div><img src="/quarter/img/cnrs.png"   style="float: right; top: 50%;" width="3.6%" height="3.6%"/></div>
+</div>
+<div id="workshops-header">  
+  <ul>    
     <li><a href="/">🏠</a></li>
     <li>|</li>
     <li><a href="/analysis/">When Causal Inference meets Statistical Analysis</a></li>
