--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -57,6 +57,8 @@
     <li><a href="/challenges/">Fundamental Challenges in Causality</a></li>
     <li>|</li>
     <li><a href="/practice/">Causality in Practice</a></li>
-    <li>|</li>    
+    <li>|</li>
+    <li><a href="#">Satellite events</a></li>
+    <li>|</li>
   </ul>
 </div>
