--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -56,9 +56,9 @@
     <li>|</li>
     <li><a href="/challenges/">Fundamental Challenges in Causality</a></li>
     <li>|</li>
+    <li><a href="/tools/">Tools for Causality</a></li>
+    <li>|</li>
     <li><a href="/practice/">Causality in Practice</a></li>
-    <li>|</li>
-    <li><a href="#">Satellite events</a></li>
-    <li>|</li>
+    <!-- <li>|</li> -->
   </ul>
 </div>
