--- a/_includes/header_home.html
+++ b/_includes/header_home.html
@@ -14,7 +14,7 @@
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li><a href="#colloquia">Colloquia</a></li>
-        <li><a href="#cfp">Call for Contributions</a></li>
+        <!-- <li><a href="#cfp">Call for Contributions</a></li> -->
         <!-- <li><a href="#courses">Courses</a></li> -->
         <li><a href="#dates">Important Dates</a></li>
         <li><a href="#speakers">Invited Professors</a></li>
