--- a/_includes/header_home.html
+++ b/_includes/header_home.html
@@ -15,7 +15,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#colloquia">Colloquia</a></li>
         <!-- <li><a href="#cfp">Call for Contributions</a></li> -->
-        <!-- <li><a href="#courses">Courses</a></li> -->
+        <li><a href="#courses">Courses</a></li>
         <li><a href="#dates">Important Dates</a></li>
         <li><a href="#speakers">Invited Professors</a></li>
         <li><a href="#scientificcommittee">Scientific Committee</a></li>        
