--- a/_includes/head_tools.html
+++ b/_includes/head_tools.html
@@ -28,8 +28,8 @@
   <meta name="twitter:description" content="{{site.description}}"/>
 
   <!-- CSS  -->
-  <link rel="stylesheet" type="text/css" href="{{ "/practice/css/bootstrap.min.css" | prepend:site.baseurl }}">
-  <link rel="stylesheet" type="text/css" href="{{ "/practice/css/main.css?2" | prepend:site.baseurl }}" media="screen,projection">
+  <link rel="stylesheet" type="text/css" href="{{ "/quarter/css/bootstrap.min.css" | prepend:site.baseurl }}">
+  <link rel="stylesheet" type="text/css" href="{{ "/quarter/css/main.css?2" | prepend:site.baseurl }}" media="screen,projection">
 
   <!-- Font Awesome -->
   <script src="{{ "/static/js/jquery.min.js?1" | prepend:site.baseurl }}"></script>
