--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -45,20 +45,21 @@
 </style>
 
 <div id="year-header">
-  <div><img src="/quarter/img/220701_AISSAI_02_LOGO.jpeg" style="float: left; top: 50%;" width="10%" height="10%"/></div>
-  <div><img src="/quarter/img/cnrs.png"   style="float: right; top: 50%;" width="3.6%" height="3.6%"/></div>
+  <div style="align-content: center; align-items: center;"><img src="/quarter/img/220701_AISSAI_02_LOGO.jpeg" style="float: left; top: 50%;" width="10%" height="10%"/></div>
+  <div style="align-content: center; align-items: center;"><img src="/quarter/img/cnrs.png"   style="float: right; top: 50;" width="2.6%" height="2.8%"/></div>
 </div>
 <div id="workshops-header">  
   <ul>    
     <li><a href="/">🏠</a></li>
     <li>|</li>
-    <li><a href="/analysis/">When Causal Inference meets Statistical Analysis</a></li>
+    <li><a href="/school/">Research School on Causality</a></li>
+    <li>|</li>
+    <li><a href="/analysis/">When Causal Inference meets Statistical Analysis</a></li>    
     <li>|</li>
     <li><a href="/challenges/">Fundamental Challenges in Causality</a></li>
     <li>|</li>
     <li><a href="/tools/">Tools for Causality</a></li>
     <li>|</li>
-    <li><a href="/practice/">Causality in Practice</a></li>
-    <!-- <li>|</li> -->
+    <li><a href="/practice/">Causality in Practice</a></li>    
   </ul>
 </div>
