--- a/_includes/header_analysis.html
+++ b/_includes/header_analysis.html
@@ -18,6 +18,7 @@
         <li><a href="#schedule">Schedule</a></li>
         <li><a href="#speakers">Keynote Speakers</a></li>        
         <li><a href="#accepted-papers">Accepted Papers</a></li>
+        <li><a href="#registration">Registration</a></li>
         <li><a href="#organizers">Organizers</a></li>        
         <li><a href="#sponsors">Sponsors</a></li>
       </ul>
