--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -52,7 +52,7 @@
   <ul>    
     <li><a href="/">🏠</a></li>
     <li>|</li>
-    <li><a href="/school/">Research School on Causality</a></li>
+    <li><a href="/school/">Spring School on Causality</a></li>
     <li>|</li>
     <li><a href="/analysis/">When Causal Inference meets Statistical Analysis</a></li>    
     <li>|</li>
