--- a/_includes/header_analysis.html
+++ b/_includes/header_analysis.html
@@ -19,7 +19,8 @@
         <li><a href="#speakers">Keynote Speakers</a></li>        
         <li><a href="#accepted-papers">Accepted Papers</a></li>
         <li><a href="#registration">Registration</a></li>
-        <li><a href="#organizers">Organizers</a></li>        
+        <li><a href="#CodeOfConduct">Code of Conduct</a></li>
+        <li><a href="#organizers">Organizers</a></li>
         <li><a href="#sponsors">Sponsors</a></li>
       </ul>
     </div>
