--- a/_includes/header_challenges.html
+++ b/_includes/header_challenges.html
@@ -19,6 +19,7 @@
         <li><a href="#speakers">Keynote Speakers</a></li>
         <li><a href="#invited-posters">Accepted Papers</a></li>
         <li><a href="#registration">Registration</a></li>
+        <li><a href="#CodeOfConduct">Code of Conduct</a></li>
         <li><a href="#organizers">Organizers</a></li>
         <li><a href="#sponsors">Sponsors</a></li>
       </ul>
