--- a/_includes/header_practice.html
+++ b/_includes/header_practice.html
@@ -23,7 +23,7 @@
 	<!-- <li><a href="#invited-posters">Invited Posters</a></li> -->
   <li><a href="#organizers">Organizers</a></li>
   <li><a href="#registration">Registration</a></li>
-	<!--<li><a href="#programcommittee">Program Committee</a></li>-->
+  <li><a href="#CodeOfConduct">Code of Conduct</a></li>	
 	<li><a href="#sponsors">Sponsors</a></li>
       </ul>
     </div>
