--- a/_includes/header_tools.html
+++ b/_includes/header_tools.html
@@ -16,6 +16,7 @@
         <li><a href="#schedule">Schedule</a></li>
         <li><a href="#speakers">Speakers</a></li>
         <li><a href="#registration">Registration</a></li>
+        <li><a href="#CodeOfConduct">Code of Conduct</a></li>
         <li><a href="#organizers">Organizers</a></li>
         <li><a href="#sponsors">Sponsors</a></li>
       </ul>
