Add the schedule for the opening session

--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -54,6 +54,8 @@
     <li>|</li>
     <li><a href="/school/">Spring School on Causality</a></li>
     <li>|</li>
+    <li><a href="/opening/">Opening Session</a></li>
+    <li>|</li>
     <li><a href="/analysis/">When Causal Inference meets Statistical Analysis</a></li>    
     <li>|</li>
     <li><a href="/challenges/">Fundamental Challenges in Causality</a></li>
