--- a/_includes/header_opening.html
+++ b/_includes/header_opening.html
@@ -15,7 +15,8 @@
       <ul class="nav navbar-nav">                        
         <li><a href="#schedule">Schedule</a></li>
         <li><a href="#speakers">Keynote Speakers</a></li>
-        <li><a href="#registration">Registration</a></li>        
+        <li><a href="#posters">Posters</a></li>
+        <li><a href="#registration">Registration</a></li>
         <li><a href="#organizers">Organizers</a></li>
         <li><a href="#sponsors">Sponsors</a></li>
         <li><a href="#CodeOfConduct">Code of Conduct</a></li>
