--- a/_includes/head_opening.html
+++ b/_includes/head_opening.html
@@ -13,16 +13,16 @@
   <meta name="description" content="{{site.description}}">
 
   <!--Open Graph Related Stuff-->
-  <meta property="og:title" content="Thematic Quarter on Causality"/>
+  <meta property="og:title" content="Thematic Quarter on Causality - Opening Session"/>
   <meta property="og:url" content="https://quarter-on-causality.github.io/opening"/>
   <meta property="og:description" content="{{site.description}}"/>
-  <meta property="og:site_name" content="Thematic Quarter on Causality"/>
+  <meta property="og:site_name" content="Thematic Quarter on Causality - Opening Session"/>
   <meta property="og:image" content=""/>
   <meta property="og:image:url" content=""/>
 
   <!--Twitter Card Stuff-->
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Thematic Quarter on Causality"/>
+  <meta name="twitter:title" content="Thematic Quarter on Causality - Opening Session"/>
   <meta name="twitter:image" content="https://quarter-on-causality.github.io/analysis/img/icon.jpg">
   <meta name="twitter:url" content="https://quarter-on-causality.github.io/opening"/>
   <meta name="twitter:description" content="{{site.description}}"/>
