--- a/_includes/header_analysis.html
+++ b/_includes/header_analysis.html
@@ -17,7 +17,8 @@
         <li><a href="#dates">Important Dates</a></li>
         <li><a href="#schedule">Schedule</a></li>
         <li><a href="#speakers">Keynote Speakers</a></li>        
-        <li><a href="#accepted-papers">Accepted Papers</a></li>
+        <li><a href="#oral-presentations">Oral Presentations</a></li>
+        <li><a href="#posters">Posters</a></li>
         <li><a href="#registration">Registration</a></li>        
         <li><a href="#organizers">Organizers</a></li>
         <li><a href="#sponsors">Sponsors</a></li>
