--- a/_includes/header_practice.html
+++ b/_includes/header_practice.html
@@ -16,13 +16,13 @@
 	<!--<li><a href="#intro">Introduction</a></li>-->
 	<!--<li><a href="#calls">Call for Contributions</a></li>-->
 	<!--<li><a href="#dates">Important Dates</a></li>-->
-	<li><a href="#schedule">Schedule</a></li>  
-	<li><a href="#speakers">Keynote Speakers</a></li>
-	<li><a href="#accepted-papers">Accepted Papers</a></li>
+	<li><a href="#schedule">Schedule</a></li>
+	<li><a href="#speakers">Speakers</a></li>
+	<!-- <li><a href="#accepted-papers">Accepted Papers</a></li> -->
 	<!-- <li><a href="#invited-posters">Invited Posters</a></li> -->
   <li><a href="#organizers">Organizers</a></li>
   <li><a href="#registration">Registration</a></li>
-  <li><a href="#CodeOfConduct">Code of Conduct</a></li>	
+  <li><a href="#CodeOfConduct">Code of Conduct</a></li>
 	<li><a href="#sponsors">Sponsors</a></li>
       </ul>
     </div>
