--- a/_includes/header_practice.html
+++ b/_includes/header_practice.html
@@ -22,6 +22,7 @@
 	<!-- <li><a href="#invited-posters">Invited Posters</a></li> -->
   <li><a href="#organizers">Organizers</a></li>
   <li><a href="#registration">Registration</a></li>
+  <li><a href="#venue">Venue</a></li>
   <li><a href="#CodeOfConduct">Code of Conduct</a></li>
 	<li><a href="#sponsors">Sponsors</a></li>
       </ul>
