Add the page for the challenge

--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -62,6 +62,7 @@
     <li>|</li>
     <li><a href="/tools/">Tools for Causality</a></li>
     <li>|</li>
-    <li><a href="/practice/">Causality in Practice</a></li>    
+    <li><a href="/practice/">Causality in Practice</a></li>
+    <li><a href="/seme/">Study week Causal Inference for Industry</a></li>    
   </ul>
 </div>
