--- a/_includes/header_common.html
+++ b/_includes/header_common.html
@@ -59,10 +59,11 @@
     <li><a href="/analysis/">When Causal Inference meets Statistical Analysis</a></li>    
     <li>|</li>
     <li><a href="/challenges/">Fundamental Challenges in Causality</a></li>
-    <li>|</li>
-    <li><a href="/tools/">Tools for Causality</a></li>
-    <li>|</li>
+    <li>|</li>    
     <li><a href="/practice/">Causality in Practice</a></li>
-    <li><a href="/seme/">Study week Causal Inference for Industry</a></li>    
+    <li>|</li>
+    <li><a href="/seme/">Study Week on Causal Inference for Industry</a></li>
+    <li>|</li>
+    <li><a href="/tools/">Tools for Causality</a></li>    
   </ul>
 </div>
