--- a/_includes/header_seme.html
+++ b/_includes/header_seme.html
@@ -13,9 +13,8 @@
 
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-        <li><a href="#schedule">Schedule</a></li>
-        <li><a href="#speakers">Speakers</a></li>
-        <li><a href="#organizers">Organizers</a></li>
+        <li><a href="#program">Program</a></li>
+        <li><a href="#speakers">Problems</a></li>
         <li><a href="#registration">Registration</a></li>
         <li><a href="#venue">Venue</a></li>
         <li><a href="#CodeOfConduct">Code of Conduct</a></li>
