Add the registration link and the description of Eki's problem

--- a/_includes/header_seme.html
+++ b/_includes/header_seme.html
@@ -14,7 +14,7 @@
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li><a href="#program">Program</a></li>
-        <li><a href="#speakers">Problems</a></li>
+        <li><a href="#problems">Problems</a></li>
         <li><a href="#registration">Registration</a></li>
         <li><a href="#venue">Venue</a></li>
         <li><a href="#CodeOfConduct">Code of Conduct</a></li>
