Add a menu item for the technical reports

--- a/_includes/header_seme.html
+++ b/_includes/header_seme.html
@@ -17,6 +17,7 @@
         <li><a href="#problems">Problems</a></li>
         <li><a href="#registration">Registration</a></li>
         <li><a href="#venue">Venue</a></li>
+        <li><a href="#reports">Technical reports</a></li>
         <li><a href="#CodeOfConduct">Code of Conduct</a></li>
         <li><a href="#sponsors">Sponsors</a></li>
       </ul>
